log/build_2026-01-14_09-39-35/mio_primo_pkg/stderr.log
  File "/home/francesco/LIMO_prj/install/mio_primo_pkg/lib/python3.10/site-packages/mio_primo_pkg/simulatore.py", line 7
    from .kalman_filter import * import pyfiglet
                                 ^^^^^^
SyntaxError: invalid syntax

